--- a/src/main/webapp/WEB-INF/views/betusers/show.jspx
+++ b/src/main/webapp/WEB-INF/views/betusers/show.jspx
@@ -7,5 +7,7 @@
         <field:display field="password" id="s_eu_zomtec_em2012_domain_BetUser_password" object="${betuser}" z="T5UJcjIjwCR89WveyfcTRgqaJco="/>
         <field:display field="roles" id="s_eu_zomtec_em2012_domain_BetUser_roles" object="${betuser}" z="qGUK5fA+dXxlrqauEfom6kgwgoU="/>
         <field:display field="enabled" id="s_eu_zomtec_em2012_domain_BetUser_enabled" object="${betuser}" z="iv/CyjM0HzzmgINGeuMQ+fTF6xQ="/>
+        <field:display field="email" id="s_eu_zomtec_em2012_domain_BetUser_email" object="${betuser}" z="orRqnB8W+oF9S3ea++baavPQ0kI="/>
+        <field:display field="money" id="s_eu_zomtec_em2012_domain_BetUser_money" object="${betuser}" z="brNV0RA9uEGcTkT+aQjRAXFWm6U="/>
     </page:show>
 </div>
