--- a/src/main/webapp/WEB-INF/views/gamegroups/update.jspx
+++ b/src/main/webapp/WEB-INF/views/gamegroups/update.jspx
@@ -5,5 +5,6 @@
     <form:update id="fu_eu_zomtec_em2012_domain_GameGroup" modelAttribute="gameGroup" path="/gamegroups" versionField="Version" z="iUNRSQy2RQq3Hvd4C95tp60oPRU=">
         <field:input field="name" id="c_eu_zomtec_em2012_domain_GameGroup_name" required="true" z="F57uFdHsy9WXLiyjn3HfCKBwVM4="/>
         <field:input field="sortOrder" id="c_eu_zomtec_em2012_domain_GameGroup_sortOrder" validationMessageCode="field_invalid_integer" z="zBb+JdoyT+RFQTOsOO59D/XDwZk="/>
+        <field:input field="factor" id="c_eu_zomtec_em2012_domain_GameGroup_factor" validationMessageCode="field_invalid_integer" z="dNiuEOSK7DnUxIQomxwALoBTOx8="/>
     </form:update>
 </div>
