--- a/src/main/webapp/WEB-INF/views/gamegroups/show.jspx
+++ b/src/main/webapp/WEB-INF/views/gamegroups/show.jspx
@@ -5,5 +5,6 @@
     <page:show id="ps_eu_zomtec_em2012_domain_GameGroup" object="${gamegroup}" path="/gamegroups" z="Lc+77FOtgOUZqxshllpfgb2nFMQ=">
         <field:display field="name" id="s_eu_zomtec_em2012_domain_GameGroup_name" object="${gamegroup}" z="lkCXfU28W9R0xJQ72oOzFG2HxvY="/>
         <field:display field="sortOrder" id="s_eu_zomtec_em2012_domain_GameGroup_sortOrder" object="${gamegroup}" z="O/b7WYFxfHqYjIXO8xbDQG5/tZo="/>
+        <field:display field="factor" id="s_eu_zomtec_em2012_domain_GameGroup_factor" object="${gamegroup}" z="eog1wl8bmipwPv+hV9yZgLg77M8="/>
     </page:show>
 </div>
