--- a/src/main/webapp/WEB-INF/snippets/game-list-item-open.jspx
+++ b/src/main/webapp/WEB-INF/snippets/game-list-item-open.jspx
@@ -34,13 +34,13 @@
 				<img src="${bet_png}" class="betImg"/>
 			</div>
 			<div style="${empty bet?'':'display:none;'}" class="placeBetContainer betContainer">
-				<form class="betForm">
-				<input name="gameId" type="hidden" value="${game.id}" />
+				<form class="betForm" method="POST" action="#">
+					<input name="gameId" type="hidden" value="${game.id}" />
 					<input name="home" data-mini="true" value="${scoreHome}" size="2" maxlength="2"
 						class="inputBet" /><span>:</span><input name="away"
-						data-mini="true" value="${scoreAway}" size="2" maxlength="2" class="inputBet" /><a
-						href="#" data-role="button" data-icon="check"
-						data-iconpos="notext" rel="external" class="placeBet">Save</a>
+						data-mini="true" value="${scoreAway}" size="2" maxlength="2" class="inputBet" />
+						<input type="submit" value="Save" data-role="button" data-icon="check"
+						data-iconpos="notext" rel="external" class="placeBet"/>
 				</form>
 			</div>
 		</div>
