--- a/src/main/webapp/WEB-INF/views/start/user.jspx
+++ b/src/main/webapp/WEB-INF/views/start/user.jspx
@@ -23,8 +23,6 @@
 
 	<div data-role="content">
 		<c:if test="${not empty betUser}">
-			<h2>User: ${betUser.username}</h2>
-			
 			<c:if test="${not empty scores_temp}">
 				<h2><spring:message code="scores_temp"/></h2>
 				<p><spring:message code="scores_temp_description"/></p>
@@ -42,13 +40,13 @@
 			<c:if test="${not empty bets}">
 				<h2><spring:message code="game_bets"/></h2>
 				
-				<ul data-role="listview" data-inset="true" data-divider-theme="a" class="portFix">
+				<ul data-role="listview" data-inset="true" data-divider-theme="a" class="portFix" id="usersBets">
 				<c:forEach items="${bets}" var="bet">
 					<li>
 					<spring:url value="/start/game/${bet.game.id}" var="game_url"/>
 					<a href="${game_url}">
-						<spring:message code="team_${fn:toLowerCase(fn:replace(bet.game.teamHome.name,' ','_'))}" text="${bet.game.teamHome.name}" /> -
-						<spring:message code="team_${fn:toLowerCase(fn:replace(bet.game.teamAway.name,' ','_'))}" text="${bet.game.teamAway.name}" />
+						<h1><spring:message code="team_${fn:toLowerCase(fn:replace(bet.game.teamHome.name,' ','_'))}" text="${bet.game.teamHome.name}" /> -
+						<spring:message code="team_${fn:toLowerCase(fn:replace(bet.game.teamAway.name,' ','_'))}" text="${bet.game.teamAway.name}" /></h1>
 						<div class="ui-li-count bubbleGroup" style="margin-right: 0px;"> 
 							<spring:url value="/images/bet.png" var="bet_png"/>
 							<div class="ui-li-count">
