--- a/src/main/webapp/WEB-INF/views/public/news.jspx
+++ b/src/main/webapp/WEB-INF/views/public/news.jspx
@@ -21,76 +21,86 @@
 		</div>
 
 		<p class="block">
-			This competition targets the EURO 2012. Everyone from the BU18 is
-			welcome to take part. Currently <strong> <fmt:formatNumber
+			Welcome to the EURO 2012 betting competition. Everyone from the BU18 is
+			welcome to join. Currently <strong> <fmt:formatNumber
 					value="${money}" type="CURRENCY" currencyCode="VND"
+					maxFractionDigits="0" /> are in the Jackpot
+			</strong>. This means if you score the highest amount of points by betting on
+			all 31 games of the EURO 2012 <strong> you will win <fmt:formatNumber
+					value="${money/2}" type="CURRENCY" currencyCode="VND"
 					maxFractionDigits="0" />
-			 are in the Jackpot</strong>. This means if you score the most points <strong>
-				you will get <fmt:formatNumber value="${money/2}" type="CURRENCY"
-					currencyCode="VND" maxFractionDigits="0" />
-			</strong> .
+			</strong> . The second (30%) and third (20%) place will also be awarded. For
+			more details read "Rules of the competition". The Jackpot will
+			increase by everyone who joins the competition. The entrance fees
+			(minimum of 300.000 VND / 150.000 VND for girls) will be completely
+			added to the Jackpot.
 		</p>
 
-	<br/>
+		<br />
 
 		<h2>Rules of the competition</h2>
 		<div data-role="collapsible-set" data-theme="c" data-content-theme="c">
 			<div data-role="collapsible" data-collapsed="true">
 				<h3>Point-Calculation</h3>
-				<p>For each match in the group stage you will be awarded with 4
-					Points if your bet matches the final result of the game. You will
-					be able to place your bets until 10 minutes before kickoff.</p>
+				<p class="block">For each match in the group stage you will be
+					awarded with 4 Points if your bet matches the final result of the
+					game. You will be able to place your bets until 10 minutes before
+					kickoff.</p>
 
 				<p>Example: You bet 2:1, game ends 2:1, 4 Points</p>
 
-				<p>3 Points will be awarded to the correct goal difference.</p>
+				<p class="block">3 Points will be awarded to the correct goal
+					difference.</p>
 
 				<p>
 					Example: <br /> - You bet 2:1, game ends 3:2, 3 Points<br /> -
 					You bet 2:2, game ends 3:3, 3 Points
 				</p>
 
-				<p>In case you just bet on the winning team you will be awarded
-					with 2 points.</p>
+				<p class="block">In case you just bet on the winning team you
+					will be awarded with 2 points.</p>
 				<p>
 					Example:<br /> - You bet 2:1, game ends 3:1, 2 Points
 				</p>
 
-				<p>In the quarterfinals the points will be doubled.</p>
+				<p class="block">In the quarterfinals the points will be
+					doubled.</p>
 				<p>
 					Example: <br /> - Your final bet 2:1, game ends 2:1, 8 Points
 				</p>
 
-				<p>In the semifinal the points will be tripled.</p>
+				<p class="block">In the semifinal the points will be tripled.</p>
 
 				<p>
 					Example:<br /> - Your final bet 2:1, game ends 2:1, 12 Points
 				</p>
-				<p>In the final the points will be quadrupled.</p>
+				<p class="block">In the final the points will be quadrupled.</p>
 
 				<p>
 					Example:<br /> - Your final bet 2:1, game ends 2:1, 16 Points
 				</p>
 
-				<p>You will get no points at all if you bet on the wrong team.</p>
+				<p class="block">You will get no points at all if you bet on the
+					wrong team.</p>
 			</div>
 			<div data-role="collapsible" data-collapsed="true">
 				<h3>Prices</h3>
-				<p>To join the competition ever attendee needs to pay a initial
-					wager about 300.000 VND (for girls only 150.000 VND). The total
-					amount of money will be paid to the TOP 3 attendees:</p>
+				<p class="block">To join the competition ever attendee needs to
+					pay a initial wager about 300.000 VND (for girls only 150.000 VND).
+					The total amount of money will be paid to the TOP 3 attendees:</p>
 
 				<p>
 					- Position 1: 50% <br /> - Position 2: 30%<br /> - Position 3:
 					20%
 				</p>
 
-				<p>If there are two people with the same score in the end they
-					will share the amount and the third place might not be awarded.</p>
+				<p class="block">If there are two people with the same score in
+					the end they will share the amount and the third place might not be
+					awarded.</p>
 
-				<p>
+				<p class="block">
 					Example:<br /> Two people (A and B) are on the first place with 40
-					points. One person (c) on the second with 30 points and another one
+					points. One person (C) on the second with 30 points and another one
 					(D) with 20 points on the third. In this case A and B will share
 					the money from place one and two (50%+30%, both get 40%). C on the
 					second place will get the remaining 20%. In this case D will get
@@ -103,14 +113,14 @@
 
 
 		<c:if test="${not empty news}">
-		<br/>
+			<br />
 			<h2>
 				<spring:message code="news" />
 			</h2>
-			<div data-role="collapsible-set"  data-theme="c" data-content-theme="c">
+			<div data-role="collapsible-set" data-theme="c"
+				data-content-theme="c">
 				<c:forEach var="newsItem" items="${news}" varStatus="status">
-					<div data-role="collapsible"
-						data-collapsed="true">
+					<div data-role="collapsible" data-collapsed="true">
 						<h3>
 							<c:out escapeXml="false" value="${newsItem.title}" />
 							@
@@ -126,7 +136,7 @@
 		</c:if>
 
 		<c:if test="${not empty scores_temp}">
-		 <br/>
+			<br />
 			<h2>
 				<spring:message code="top5" />
 			</h2>
