--- a/src/main/webapp/WEB-INF/views/public/news.jspx
+++ b/src/main/webapp/WEB-INF/views/public/news.jspx
@@ -35,6 +35,9 @@
 			(minimum of 300.000 VND / 150.000 VND for girls) will be completely
 			added to the Jackpot.
 		</p>
+		<p>
+			<strong>Don't forget:</strong> To activate your personal account you need to pay the wager to Truong Anh Vu. The account will be activated afterwards. Currently ${usersTotal} users are registered and ${usersActive} are activated.
+		</p>
 
 		<br />
 
