--- a/src/main/webapp/WEB-INF/views/login-mobile.jspx
+++ b/src/main/webapp/WEB-INF/views/login-mobile.jspx
@@ -54,12 +54,22 @@
 					
 					<spring:message code="security_login_form_password_message" var="pwd_msg" htmlEscape="false" />
 				</div>
+				<br />
+				
+				<div>
+					<label for="slider2" style="display:block;"><spring:message code="security_login_form_remember" htmlEscape="false" /></label>
+					
+					<select name="_spring_security_remember_me" id="_spring_security_remember_me" data-role="slider">
+						<option value="false">Off</option>
+						<option value="true">On</option>
+					</select>
+				</div>
 				
 				<br />
 		
 				<fieldset class="ui-grid-a">
 						<div class="ui-block-a"><button id="reset" type="reset" data-theme="d"><spring:message code="button_reset" htmlEscape="false" /></button></div>
-						<div class="ui-block-b"><button id="proceed" type="submit" data-theme="a"><spring:message code="button_submit" htmlEscape="false" /></button></div>
+						<div class="ui-block-b"><button id="proceed" type="submit" data-theme="a"><spring:message code="security_login_title" htmlEscape="false" /></button></div>
 			    </fieldset>
 			</form>
 		</div>
