--- a/src/main/webapp/styles/bet.css
+++ b/src/main/webapp/styles/bet.css
@@ -122,3 +122,24 @@ div.bubbleGroup div.ui-li-count {
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
+
+
+
+.cntSeparator {
+  font-size: 54px;
+  margin: 10px 7px;
+  color: #000;
+}
+.desc { margin-top: 10px;}
+
+.desc div {
+  float: left;
+  font-family: Arial;
+  width: 105px;
+  margin-right: 30px;
+  font-size: 13px;
+  text-align:center;
+  font-weight: bold;
+  color: #000;
+}
