--- a/src/main/webapp/WEB-INF/views/start/group-list.jspx
+++ b/src/main/webapp/WEB-INF/views/start/group-list.jspx
@@ -15,6 +15,7 @@
 	<!-- /header -->
 
 	<div data-role="content">
+		<h2>Groups and Stages</h2>
 		<c:if test="${not empty gameGroups}">
 			<ul data-role="listview" data-inset="true">
 				<c:forEach items="${gameGroups}" var="gameGroup">
@@ -22,6 +23,42 @@
 						<tiles:putAttribute name="gameGroup" value="${gameGroup}"/>
 					</tiles:insertTemplate>
 				</c:forEach>
+			</ul>
+		</c:if>
+		
+		
+		<c:if test="${not empty games}">
+			<br/> 
+			<h2>Next 10 matches</h2>
+			<ul data-role="listview" data-inset="true" data-divider-theme="a" class="portFix">
+			<c:forEach var="game" items="${games}">
+				<fmt:formatDate value="${game.kickOff}" type="date" dateStyle="long" var="currentGameDate" />
+				
+				<c:if test="${empty gameStatusGroup || gameStatusGroup != currentGameDate}">
+					<c:set var="gameStatusGroup" value="${currentGameDate}"/>
+					<li data-role="list-divider">${currentGameDate}</li>
+				</c:if>
+				
+		
+				<c:choose>
+					<c:when test="${game.betOpen}">
+						<tiles:insertTemplate template="/WEB-INF/snippets/game-list-item-open.jspx">
+							<tiles:putAttribute name="game" value="${game}"/>
+							<c:if test="${not empty bets[game.id]}">
+								<tiles:putAttribute name="bet" value="${bets[game.id]}"/>
+							</c:if>
+						</tiles:insertTemplate>
+					</c:when>
+					<c:otherwise>
+						<tiles:insertTemplate template="/WEB-INF/snippets/game-list-item-closed.jspx">
+							<tiles:putAttribute name="game" value="${game}"/>
+							<c:if test="${not empty bets[game.id]}">
+								<tiles:putAttribute name="bet" value="${bets[game.id]}"/>
+							</c:if>
+						</tiles:insertTemplate>
+					</c:otherwise>
+				</c:choose>
+			</c:forEach>
 			</ul>
 		</c:if>
 	</div>
