--- a/src/main/webapp/WEB-INF/views/public/dashboard.jspx
+++ b/src/main/webapp/WEB-INF/views/public/dashboard.jspx
@@ -102,7 +102,7 @@
 					<div class="ui-block-a" style="text-align: center; width: 200px;">
 						<img
 							src="${team_home_img}" />
-						<h3 class="ellipses">${nextGame.teamHome.name}</h3>
+						<h3 class="ellipses"><spring:message code="team_${fn:toLowerCase(fn:replace(nextGame.teamHome.name,' ','_'))}" text="${nextGame.teamHome.name}" /></h3>
 					</div>
 					<div class="ui-block-b" style="text-align: center; width: 50px;">
 						<h1 style="font-size:40px;">:</h1>
@@ -110,7 +110,7 @@
 					<div class="ui-block-c" style="text-align: center; width: 200px;">
 						<img
 							src="${team_away_img}" />
-						<h3 class="ellipses">${nextGame.teamAway.name}</h3>
+						<h3 class="ellipses"><spring:message code="team_${fn:toLowerCase(fn:replace(nextGame.teamAway.name,' ','_'))}" text="${nextGame.teamAway.name}" /></h3>
 					</div>
 				</div>
 					</div>
