--- a/src/main/webapp/WEB-INF/views/public/news.jspx
+++ b/src/main/webapp/WEB-INF/views/public/news.jspx
@@ -137,6 +137,40 @@
 				</c:forEach>
 			</div>
 		</c:if>
+		
+		<c:if test="${not empty games}">
+			<br/> 
+			<h2>Finished/running matches</h2>
+			<ul data-role="listview" data-inset="true" data-divider-theme="a" class="portFix">
+			<c:forEach var="game" items="${games}">
+				<fmt:formatDate value="${game.kickOff}" type="date" dateStyle="long" var="currentGameDate" />
+				
+				<c:if test="${empty gameStatusGroup || gameStatusGroup != currentGameDate}">
+					<c:set var="gameStatusGroup" value="${currentGameDate}"/>
+					<li data-role="list-divider">${currentGameDate}</li>
+				</c:if>
+				
+				<c:choose>
+					<c:when test="${game.betOpen}">
+						<tiles:insertTemplate template="/WEB-INF/snippets/game-list-item-open.jspx">
+							<tiles:putAttribute name="game" value="${game}"/>
+							<c:if test="${not empty bets[game.id]}">
+								<tiles:putAttribute name="bet" value="${bets[game.id]}"/>
+							</c:if>
+						</tiles:insertTemplate>
+					</c:when>
+					<c:otherwise>
+						<tiles:insertTemplate template="/WEB-INF/snippets/game-list-item-closed.jspx">
+							<tiles:putAttribute name="game" value="${game}"/>
+							<c:if test="${not empty bets[game.id]}">
+								<tiles:putAttribute name="bet" value="${bets[game.id]}"/>
+							</c:if>
+						</tiles:insertTemplate>
+					</c:otherwise>
+				</c:choose>
+			</c:forEach>
+			</ul>
+		</c:if>
 
 		<c:if test="${not empty scores_temp}">
 			<br />
