--- a/src/main/webapp/WEB-INF/views/public/dashboard.jspx
+++ b/src/main/webapp/WEB-INF/views/public/dashboard.jspx
@@ -24,11 +24,14 @@
 <spring:url value="/styles/bet.css" var="bet_css" />
 <spring:url value="/js/dash.js" var="dash_js" />
 <spring:url value="/js/counter.js" var="count_js" />
- 
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
+<spring:url value="/styles/jquery.mobile-1.1.0.min.css" var="jqm_css" />
+ <spring:url value="/js/jquery-1.6.4.min.js" var="jq_js" />
+
+<link rel="stylesheet" href="${jqm_css}" />
 <link rel="stylesheet" href="${bet_css}" />
 
-<script src="http://code.jquery.com/jquery-1.6.4.min.js">
+
+<script src="${jq_js}">
 <!-- dummy -->
 </script>
 <script src="${count_js}">
